--- a/website/static/stylesheets/admin_bar.sass
+++ b/website/static/stylesheets/admin_bar.sass
@@ -6,7 +6,7 @@ $admin-padding: 10px
   height: $admin-height
   background: $chickadee-black
 
-  font-family: $header-font-family
+  font-family: $sans-font-family
   color: $chickadee-light-gray
   font-size: $base-font-size - 3
   line-height: $admin-height
