--- a/website/static/stylesheets/footer.sass
+++ b/website/static/stylesheets/footer.sass
@@ -1,8 +1,7 @@
 #footer
   color: $chickadee-cream
   font-size: 16px
-  letter-spacing: 1px
-  font-family: $header-font-family
+  @include sans-font(light)
 
   #content-copyright
     max-width: 60%
