--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -1,20 +1,3 @@
-// Fonts
-@font-face
-  font-family: 'adelaidaregular'
-  src: url('../fonts/adelaida/adelaida-regular-webfont.eot')
-  src: url('../fonts/adelaida/adelaida-regular-webfont.eot?#iefix') format('embedded-opentype')
-  src: url('../fonts/adelaida/adelaida-regular-webfont.woff') format('woff')
-  src: url('../fonts/adelaida/adelaida-regular-webfont.ttf') format('truetype')
-  font-weight: normal
-  font-style: normal
-
-@import url(http://fonts.googleapis.com/css?family=Dosis:200,500,600)
-
-$base-font-size: 17px
-$base-font-family: Georgia, serif
-$header-font-family: 'Dosis', sans-serif
-
-
 // Colors
 $chickadee-cream: #f5f4ee
 $chickadee-white: #deedf2
@@ -22,9 +5,11 @@ $chickadee-light-gray: #cfd3cf
 $chickadee-gray: #9ba5a9
 $chickadee-dark-gray: #777e86
 $chickadee-black: #3c3a47
-$moss-light: #b9c4b4
+
 $moss: #788c6d
-$moss-dark: #63664e
+$moss-light: lighten($moss, 10%)
+$moss-dark: darken($moss, 10%)
+
 $peach-pink: #de8d88
 $peach-orange: #deb888
 
