--- a/creations/static/stylesheets/writing.sass
+++ b/creations/static/stylesheets/writing.sass
@@ -10,10 +10,11 @@
       margin: 0 2.5% 50px 2.5%
       width: 20%
 
-      img, span, ul, div
+      img, ul, div
         float: left
         width: 100%
-        margin-bottom: 5px
+        margin-bottom: $whitespace / 3
+        line-height: 130%
 
       .title
         font-style: italic
