--- a/website/static/stylesheets/header.sass
+++ b/website/static/stylesheets/header.sass
@@ -2,9 +2,7 @@
   padding-top: 5px
   text-align: center
   color: $chickadee-white
-  font-family: $header-font-family
-  font-weight: 200
-  letter-spacing: 1px
+  @include sans-font(light)
 
   a
     color: $light-link-color
