minor copy changes

--- a/creations/templates/writing.html
+++ b/creations/templates/writing.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 <div class="page-section">
-  Keep up to date with Laura's birding at
+  Keep up to date with
   <a href="http://lauraerickson.blogspot.com">Laura's Birding Blog</a>!
 </div>
 
