--- a/creations/templates/writing.html
+++ b/creations/templates/writing.html
@@ -56,7 +56,7 @@
           <li class="tag">
             <span>
               {{ tag }}
-            </span<
+            </span>
           </li>
         {% endfor %}
         </ul>
