style lists in markdown

--- a/website/static/stylesheets/elements.sass
+++ b/website/static/stylesheets/elements.sass
@@ -24,6 +24,12 @@
     &:last-child
       margin-bottom: none
 
+  ul
+    list-style-type: disc
+
+  ol
+    list-style-type: decimal
+
 
 .card
   border: 1px solid $chickadee-light-gray
