--- a/website/static/stylesheets/elements.sass
+++ b/website/static/stylesheets/elements.sass
@@ -26,9 +26,11 @@
 
   ul
     list-style-type: disc
+    list-style-position: inside
 
   ol
     list-style-type: decimal
+    list-style-position: inside
 
 
 .card
