--- a/birds/static/stylesheets/bird.sass
+++ b/birds/static/stylesheets/bird.sass
@@ -19,6 +19,10 @@
       display: block
       clear: both
 
+    ul
+      list-style-type: disc
+      list-style-position: inside
+
   #blurb
     float: left
     width: 100%
