spacing around headers in markdown

--- a/website/static/stylesheets/elements.sass
+++ b/website/static/stylesheets/elements.sass
@@ -5,6 +5,8 @@
     color: $chickadee-black
     font-weight: bold
     font-variant: normal
+    margin-top: $whitespace
+    margin-bottom: $whitespace / 2
 
   h1
     font-size: $base-font-size + 12
