allow arbitrary nesting of research categories

--- a/birds/static/stylesheets/bird.sass
+++ b/birds/static/stylesheets/bird.sass
@@ -19,6 +19,12 @@
       display: block
       clear: both
 
+      &.year
+        clear: none
+        display: inline
+        font-size: $base-font-size - 4
+        color: $chickadee-gray
+
     ul
       list-style-type: disc
       list-style-position: inside
