organize common styles. book permalink page.

--- a/creations/static/stylesheets/writing.sass
+++ b/creations/static/stylesheets/writing.sass
@@ -20,9 +20,6 @@
         font-style: italic
         font-weight: bold
 
-      .scroll-box
-        max-height: 90px
-
       &:nth-child(4n+1)
         clear: left
 
@@ -51,7 +48,12 @@
         width: 95%
 
 
-#article
-  #content
-    div
-      padding-bottom: $whitespace
+#book
+  img
+    width: 100%
+
+  #tags
+    float: left
+    width: 100%
+    clear: both
+    margin-top: $whitespace
