--- a/website/static/stylesheets/page.sass
+++ b/website/static/stylesheets/page.sass
@@ -38,3 +38,16 @@ html, body
 
   &:last-child
     margin-bottom: 0
+
+.two-columns
+  .column
+    float: left
+    width: 47%
+
+    &:last-child
+      margin-left: 6%
+
+.field
+  float: left
+  clear: both
+  margin-bottom: $whitespace / 2
