--- a/creations/templates/article.html
+++ b/creations/templates/article.html
@@ -7,48 +7,51 @@
 
 {% block content %}
 
-{% if article.published_by or article.date_published %}
-<b>
-  Published
-  {% if article.published_by %}by {{ article.published_by }}{% endif %}
-  {% if article.date_published %}on {{ article.date_published }}{% endif %}
-</b>
-{% endif %}
+<div class="page-section">
+  {% if article.published_by or article.date_published %}
+  <span class="field">
+    Published
+    {% if article.published_by %}by {{ article.published_by }}{% endif %}
+    {% if article.date_published %}on {{ article.date_published }}{% endif %}
+  </span>
+  {% endif %}
 
-{% if article.url %}
-<div>
-  <a href="{{ article.url }}">URL</a>
-</div>
-{% endif %}
+  {% if article.url %}
+  <span class="field">
+    <a href="{{ article.url }}">URL</a>
+  </span>
+  {% endif %}
 
-{% if article.file %}
-<div>
-  <a href="{{ article.file }}">Download article</a>
+  {% if article.file %}
+  <span class="field">
+    <a href="{{ article.file }}">
+      Download article</a>
+  </span>
+  {% endif %}
+
+  {% if article.species.all|length or article.tags.all|length %}
+  <span class="field">
+    Tags:
+    <ul>
+    {% for bird in article.species.all %}
+      <li class="tag">
+        <a href="{% url 'bird_url' id=bird.id%}">{{ bird.common_name }}</a>
+      </li>
+    {% endfor %}
+
+    {% for tag in article.tags.all %}
+      <li class="tag">
+        <span>{{ tag }}</span>
+      </li>
+    {% endfor %}
+    </ul>
+  </span>
+  {% endif %}
 </div>
-{% endif %}
 
 {% if article.text %}
-<div class="markdown">
+<div class="page-section markdown">
   {{ article.text|markdown }}
-</div>
-{% endif %}
-
-{% if article.species.all|length or article.tags.all|length %}
-<div>
-  Tags:
-  <ul>
-  {% for bird in article.species.all %}
-    <li class="tag">
-      <a href="{% url 'bird_url' id=bird.id%}">{{ bird.common_name }}</a>
-    </li>
-  {% endfor %}
-
-  {% for tag in article.tags.all %}
-    <li class="tag">
-      <span>{{ tag }}</span>
-    </li>
-  {% endfor %}
-  </ul>
 </div>
 {% endif %}
 
