miscellany -> miscellanous projects

--- a/creations/templates/miscellany.html
+++ b/creations/templates/miscellany.html
@@ -3,7 +3,7 @@
 
 {% block body_id %}miscellany{% endblock %}
 
-{% block page_title %}Miscellany{% endblock %}
+{% block page_title %}Miscellaneous Projects{% endblock %}
 
 {% block content %}
 <div class="page-section">
