--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -30,6 +30,14 @@
 </div>
 
 <div class="page-section">
+  <h3 class="page-subtitle">Speaking Engagements</h3>
+  <div>
+    <a href="{% url 'speaking_url' %}">Click here</a>
+    to learn about Laura's speaking engagements.
+  </div>
+</div>
+
+<div class="page-section">
   <h3 class="page-subtitle">Publicity Photos</h3>
   <div id="publicity-photos">
     {% for photo in laura.userprofile.publicity_photos.all %}
