--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -43,5 +43,6 @@ $whitespace: 36px
 @import ../../../birds/static/stylesheets/birds_taxonomical
 @import ../../../creations/static/stylesheets/radio
 @import ../../../creations/static/stylesheets/writing
+@import ../../../creations/static/stylesheets/speaking
 @import ../../../creations/static/stylesheets/miscellany
 @import ../../../creations/static/stylesheets/research
