forgot markdown tag

--- a/creations/templates/speaking_program.html
+++ b/creations/templates/speaking_program.html
@@ -10,7 +10,7 @@ Speaking Program: <i>{{ program.title }}</i>
 {% block content %}
 
 <div class="page-section">
-  {{ program.description }}
+  {{ program.description|markdown }}
 </div>
 
 {% endblock %}
