styling for images in speaking programs

--- a/creations/templates/speaking_program.html
+++ b/creations/templates/speaking_program.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load markdown_deux_tags %}
 
-{% block body_id %}speaking_program{% endblock %}
+{% block body_id %}speaking-program{% endblock %}
 
 {% block page_title %}
 Speaking Program: <i>{{ program.title }}</i>
