--- a/creations/static/stylesheets/speaking.sass
+++ b/creations/static/stylesheets/speaking.sass
@@ -1,3 +1,12 @@
 #speaking
   ul
     @include bulleted-list
+
+#speaking-program
+  img
+    position: relative
+    width: 50%
+    left: 50%
+    margin-left: -25%
+    margin-top: $whitespace
+    margin-bottom: $whitespace
