--- a/creations/templates/speaking.html
+++ b/creations/templates/speaking.html
@@ -34,7 +34,7 @@
 </div>
 
 <div class="page-section">
-  <h3 class="page-subtitle">Keynotes and other major presentations</h3>
+  <h3 class="page-subtitle">Keynotes and Other Major Presentations</h3>
   <div class="markdown">
     {{ laura.userprofile.speaking_keynotes|markdown }}
   </div>
