move speaking overview to database field

--- a/creations/templates/speaking.html
+++ b/creations/templates/speaking.html
@@ -8,18 +8,9 @@
 {% block content %}
 
 <div class="page-section">
-  Since her heart attack in 2015, Laura has cut back on travel and speaking
-  engagements. To accomplish that, and because she has so little saved for a
-  retirement that will be coming sooner rather than later (before the heart
-  attack, she thought she'd be working forever), she's raised her rates.
-  Besides her speaking fee (which we can negotiate), she must be compensated
-  for travel expenses ($0.57.5 per mile plus lodging costs en route, or
-  reimbursement for flying and car rental) and lodging during the event for
-  herself and her plucky sidekick Pip the Birding Dog. She makes exceptions in
-  a few situations, for organizations that she wants to support and/or for
-  exceptional birding and bird photography opportunities or other personal
-  reasons. She truly can no longer afford the time and exhaustion of most
-  programs below her asking rate.
+  <div class="markdown">
+    {{ laura.userprofile.speaking_overview|markdown }}
+  </div>
 </div>
 
 <div class="page-section">
