--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -46,3 +46,4 @@ $whitespace: 36px
 @import ../../../creations/static/stylesheets/speaking
 @import ../../../creations/static/stylesheets/miscellany
 @import ../../../creations/static/stylesheets/research
+@import ../../../waystohelp/static/stylesheets/ways_to_help
