--- a/website/templates/head.html
+++ b/website/templates/head.html
@@ -10,6 +10,8 @@
     type="text/javascript"></script>
   <script src="{{ STATIC_URL }}js/creations.js"
     type="text/javascript"></script>
+  <script src="{{ STATIC_URL }}js/ways_to_help.js"
+    type="text/javascript"></script>
 
   <title>Laura Erickson's For the Birds</title>
 </head>
