--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -25,6 +25,7 @@ $dark-link-color-active: darken($peach-orange, 10%)
 
 // Spacing
 $whitespace: 36px
+$card-border-radius: 2px
 
 
 // Import other stylesheets
@@ -38,7 +39,6 @@ $whitespace: 36px
 @import footer
 @import home
 @import about
-@import ../../../birds/static/stylesheets/bird
 @import ../../../birds/static/stylesheets/birds
 @import ../../../birds/static/stylesheets/birds_taxonomical
 @import ../../../creations/static/stylesheets/radio
