--- a/birds/static/stylesheets/birds.sass
+++ b/birds/static/stylesheets/birds.sass
@@ -1,3 +1,41 @@
 #birds
   ul
     @include bulleted-list
+
+#bird
+  #main-photo
+    float: left
+    margin-right: 50px
+    margin-bottom: 50px
+
+  .card
+    float: left
+    padding: 10px
+    margin-right: $whitespace / 2
+    margin-bottom: $whitespace / 2
+    max-width: 500px
+    border: 1px solid $chickadee-light-gray
+    border-radius: $card-border-radius
+
+    h3
+      margin-bottom: 10px
+      text-align: center
+
+    span
+      display: block
+      clear: both
+
+      &.year
+        clear: none
+        display: inline
+        font-size: $base-font-size - 4
+        color: $chickadee-gray
+
+    ul
+      list-style-type: disc
+      list-style-position: inside
+
+  #blurb
+    float: left
+    width: 100%
+    clear: both
