Organize coffee and sass files.
Call functions only on relevant pages (as determined by
body#id).

Name coffee and sass files per app name, not python
underscored page name.

--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -5,11 +5,9 @@ $chickadee-light-gray: #cfd3cf
 $chickadee-gray: #9ba5a9
 $chickadee-dark-gray: #777e86
 $chickadee-black: #3c3a47
-
 $moss: #788c6d
 $moss-light: lighten($moss, 10%)
 $moss-dark: darken($moss, 10%)
-
 $peach-pink: #de8d88
 $peach-orange: #deb888
 
@@ -34,16 +32,15 @@ $card-border-radius: 2px
 @import font
 @import elements
 @import page
-@import admin_bar
+@import adminbar
 @import header
 @import footer
 @import home
 @import about
 @import ../../../birds/static/stylesheets/birds
-@import ../../../birds/static/stylesheets/birds_taxonomical
 @import ../../../creations/static/stylesheets/radio
 @import ../../../creations/static/stylesheets/writing
 @import ../../../creations/static/stylesheets/speaking
 @import ../../../creations/static/stylesheets/miscellany
 @import ../../../creations/static/stylesheets/research
-@import ../../../waystohelp/static/stylesheets/ways_to_help
+@import ../../../waystohelp/static/stylesheets/waystohelp
