--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load markdown_deux_tags %}
+{% load thumbnail %}
 
 {% block body_id %}about{% endblock %}
 
@@ -41,9 +42,11 @@
   <h3 class="page-subtitle">Publicity Photos</h3>
   <div id="publicity-photos">
     {% for photo in laura.userprofile.publicity_photos.all %}
-    <a href="{{ MEDIA_URL }}{{ photo.image }}">
-      <img src="{{ MEDIA_URL }}{{ photo.image }}" />
-    </a>
+      {% thumbnail photo.image "x120" as im %}
+      <a href="{{ MEDIA_URL }}{{ photo.image }}">
+        <img src="{{ im.url }}" />
+      </a>
+      {% endthumbnail %}
     {% endfor %}
   </div>
 </div>
